Ticket #28920: Added derived model channel "form data".

--- a/com.top_logic.element/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic.element/src/main/java/META-INF/messages_de.properties
@@ -1132,6 +1132,10 @@ com.top_logic.element.meta.form.FieldProviderAnnotation = Feldanbieter-Anmerkung
 com.top_logic.element.meta.form.FieldProviderAnnotation.impl = Umsetzung
 com.top_logic.element.meta.form.FieldProviderAnnotation.impl.tooltip = Konfiguration des zu verwendenden <i>Feldanbieters</i>.
 com.top_logic.element.meta.form.FieldProviderAnnotation.tooltip = <i>Attributannotation</i> eines <i>Feldanbieters</i>.
+com.top_logic.element.meta.form.FormData = Formular Daten
+com.top_logic.element.meta.form.FormData.Config.component-ref = Referenz der Komponente
+com.top_logic.element.meta.form.FormData.Config.component-ref.tooltip = Angabe der Komponente für den Zugriff auf die Formulardaten.
+com.top_logic.element.meta.form.FormData.tooltip = <i>Kanal, der den</i> Zugriff auf die aktuellen Formulardaten eines <i>Formular-Handlers</i><i>verknüpft</i>.
 com.top_logic.element.meta.form.component.AbstractApplyAttributedCommandHandler = Objektbefehls-Handler anwenden
 com.top_logic.element.meta.form.component.AbstractApplyAttributedCommandHandler.tooltip = Erweiterter Handler für Anwenden (und Speichern) Befehle mit <i>Objekt</i>. <p> Zusätzlich zum <i>Object-apply-Befehlshandler</i> ermöglicht diese Klasse die automatische Speicherung von Werten aus den <i>Objektobjekten</i> über <code>#saveMetaAttributes(FormContext)</code>. Dabei werden nur die im <i>Business-Objekttyp</i> definierten Werte gespeichert. </p>
 com.top_logic.element.meta.form.component.AttributedCompareCommandHandler = Objekt-Vergleichsbefehl-Handler
