--- a/com.top_logic.element/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic.element/src/main/java/META-INF/messages_en.properties
@@ -1132,6 +1132,10 @@ com.top_logic.element.meta.form.FieldProviderAnnotation = Field provider annotat
 com.top_logic.element.meta.form.FieldProviderAnnotation.impl = Implementation
 com.top_logic.element.meta.form.FieldProviderAnnotation.impl.tooltip = Configuration of the <i>field provider</i> to use.
 com.top_logic.element.meta.form.FieldProviderAnnotation.tooltip = <i>Attribute annotation</i> for annotating a <i>field provider</i>.
+com.top_logic.element.meta.form.FormData = Form data
+com.top_logic.element.meta.form.FormData.Config.component-ref = Component reference
+com.top_logic.element.meta.form.FormData.Config.component-ref.tooltip = Specification of the component to access the form data.
+com.top_logic.element.meta.form.FormData.tooltip = <i>Channel linking</i> accessing the current form data of a <i>form handler</i>.
 com.top_logic.element.meta.form.component.AbstractApplyAttributedCommandHandler = Apply object command handler
 com.top_logic.element.meta.form.component.AbstractApplyAttributedCommandHandler.tooltip = Extended handler for apply (and save) commands with <i>object</i>. <p> Additionally to the <i>object apply command handler</i>, this class allows the automatic storage of values from the <i>object</i> objects via <code>#saveMetaAttributes(FormContext)</code>. This will only store the values defined in the <i>business object type</i>. </p>
 com.top_logic.element.meta.form.component.AttributedCompareCommandHandler = Object compare command handler
