Ticket #28920: Added I18N for "form apply" and "in transaction".

--- a/com.top_logic/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic/src/main/java/META-INF/messages_en.properties
@@ -3250,6 +3250,10 @@ com.top_logic.layout.form.component.PostCreateAction$CloseDialog = Close dialog
 com.top_logic.layout.form.component.PostCreateAction$CloseDialog.tooltip = Closes the dialog where the executed command was defined in.
 com.top_logic.layout.form.component.PostCreateAction$DeliverAsDownload = Deliver as download
 com.top_logic.layout.form.component.PostCreateAction$DeliverAsDownload.tooltip = Provides the result of a command as download. <p> The command must create a binary value as result. </p>
+com.top_logic.layout.form.component.PostCreateAction$FormApply = Form apply
+com.top_logic.layout.form.component.PostCreateAction$FormApply.tooltip = <i>UI action</i> storing the form context of the context component back its model.
+com.top_logic.layout.form.component.PostCreateAction$InTransaction = In transaction
+com.top_logic.layout.form.component.PostCreateAction$InTransaction.tooltip = Performs actions in a transaction context.
 com.top_logic.layout.form.component.PostCreateAction$SetEditMode = Set edit mode
 com.top_logic.layout.form.component.PostCreateAction$SetEditMode.tooltip = <i>UI action</i> activating edit mode in an <i>edit mode</i> component.
 com.top_logic.layout.form.component.PostCreateAction$SetModel = Set model
@@ -3262,6 +3266,8 @@ com.top_logic.layout.form.component.PostCreateAction$WithTransform = With transf
 com.top_logic.layout.form.component.PostCreateAction$WithTransform.tooltip = Base class for <i>UI action</i> that can transform their input model.
 com.top_logic.layout.form.component.PostCreateAction.SetEditMode.Config.component-ref = Component reference
 com.top_logic.layout.form.component.PostCreateAction.SetEditMode.Config.component-ref.tooltip = The component to switch to edit mode.
+com.top_logic.layout.form.component.PostCreateAction.SetEditMode.Config.mode = Mode
+com.top_logic.layout.form.component.PostCreateAction.SetEditMode.Config.mode.tooltip = The mode to set on the target component.
 com.top_logic.layout.form.component.PostCreateAction.SetModel.Config.target = Target
 com.top_logic.layout.form.component.PostCreateAction.SetModel.Config.target.tooltip = The target channel to propagate the new model to.
 com.top_logic.layout.form.component.PostCreateAction.ShowComponent.Config.target-component = Target component
@@ -8121,6 +8127,8 @@ com.top_logic.tool.boundsec.DispatchingSecurityObjectProvider.ProviderConfig.com
 com.top_logic.tool.boundsec.DispatchingSecurityObjectProvider.ProviderConfig.impl = Implementation
 com.top_logic.tool.boundsec.DispatchingSecurityObjectProvider.ProviderConfig.impl.tooltip = The <i>security object provider</i> that is used for the command group with given id.
 com.top_logic.tool.boundsec.DispatchingSecurityObjectProvider.tooltip = <i>Security object provider</i> delegating to different <i>security object provider</i> depending on the <i>command group</i>.
+com.top_logic.tool.boundsec.GenericCommandHandler = Generic command
+com.top_logic.tool.boundsec.GenericCommandHandler.tooltip = <i>Command</i> that is composed of a configurable chain of actions.
 com.top_logic.tool.boundsec.LayoutSecurityConfiguration = Layout security configuration
 com.top_logic.tool.boundsec.LayoutSecurityConfiguration.collector = Collector
 com.top_logic.tool.boundsec.LayoutSecurityConfiguration.collector.tooltip = Configuration of the collector to collect <i>command group</i> for the layout.
