Ticket #28920: Added I18N for "form apply" and "in transaction".

--- a/com.top_logic/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic/src/main/java/META-INF/messages_de.properties
@@ -3248,6 +3248,10 @@ com.top_logic.layout.form.component.PostCreateAction$CloseDialog = Dialog schlie
 com.top_logic.layout.form.component.PostCreateAction$CloseDialog.tooltip = Schließt den Dialog, in dem der ausgeführte Befehl definiert wurde.
 com.top_logic.layout.form.component.PostCreateAction$DeliverAsDownload = Als Download bereitstellen
 com.top_logic.layout.form.component.PostCreateAction$DeliverAsDownload.tooltip = Liefert das Ergebnis eines Befehls als Download. <p> Der Befehl muss einen Binärwert als Ergebnis erzeugen. </p>
+com.top_logic.layout.form.component.PostCreateAction$FormApply = Formulardaten übernehmen
+com.top_logic.layout.form.component.PostCreateAction$FormApply.tooltip = <i>UI-Aktion</i>, die den Formularkontext der Komponente in ihrem Modell speichert.
+com.top_logic.layout.form.component.PostCreateAction$InTransaction = In Transaktion
+com.top_logic.layout.form.component.PostCreateAction$InTransaction.tooltip = Führt Aktionen in einem Transaktionskontext aus.
 com.top_logic.layout.form.component.PostCreateAction$SetEditMode = Bearbeitungsmodus einstellen
 com.top_logic.layout.form.component.PostCreateAction$SetEditMode.tooltip = <i>UI-Aktion</i> zur Aktivierung des Bearbeitungsmodus in einer Komponente mit <i>Bearbeitungsmodus</i>.
 com.top_logic.layout.form.component.PostCreateAction$SetModel = Modell setzen
@@ -3260,6 +3264,8 @@ com.top_logic.layout.form.component.PostCreateAction$WithTransform = Mit Transfo
 com.top_logic.layout.form.component.PostCreateAction$WithTransform.tooltip = Basisklasse für <i>UI-Aktionen</i>, die ihr Eingabemodell transformieren können.
 com.top_logic.layout.form.component.PostCreateAction.SetEditMode.Config.component-ref = Komponente
 com.top_logic.layout.form.component.PostCreateAction.SetEditMode.Config.component-ref.tooltip = Die Komponente zum Umschalten in den Bearbeitungsmodus.
+com.top_logic.layout.form.component.PostCreateAction.SetEditMode.Config.mode = Modus
+com.top_logic.layout.form.component.PostCreateAction.SetEditMode.Config.mode.tooltip = Der Modus, der für die Zielkomponente festgelegt werden soll.
 com.top_logic.layout.form.component.PostCreateAction.SetModel.Config.target = Ziel
 com.top_logic.layout.form.component.PostCreateAction.SetModel.Config.target.tooltip = Der Zielkanal, auf den das neue Modell verbreitet werden soll.
 com.top_logic.layout.form.component.PostCreateAction.ShowComponent.Config.target-component = Zielkomponente
@@ -8109,6 +8115,8 @@ com.top_logic.tool.boundsec.DispatchingSecurityObjectProvider.ProviderConfig.com
 com.top_logic.tool.boundsec.DispatchingSecurityObjectProvider.ProviderConfig.impl = Umsetzung
 com.top_logic.tool.boundsec.DispatchingSecurityObjectProvider.ProviderConfig.impl.tooltip = Die Berechnung des <i>Berechtigungsobjekts</i>, die für die Befehlsgruppe mit der angegebenen ID verwendet wird.
 com.top_logic.tool.boundsec.DispatchingSecurityObjectProvider.tooltip = Berechnung von <i>Berechtigungsobjektes</i>, die je nach <i>Befehlsgruppe</i> an verschiedene Berechnungen von <i>Berechtigungsobjekten</i> delegiert.
+com.top_logic.tool.boundsec.GenericCommandHandler = Generischer Befehl
+com.top_logic.tool.boundsec.GenericCommandHandler.tooltip = <i>Befehl</i>, der sich aus einer konfigurierbaren Kette von Aktionen zusammensetzt.
 com.top_logic.tool.boundsec.LayoutSecurityConfiguration = Layout-Berechtigungskonfiguration
 com.top_logic.tool.boundsec.LayoutSecurityConfiguration.collector = Sammler
 com.top_logic.tool.boundsec.LayoutSecurityConfiguration.collector.tooltip = Konfiguration des Kollektors zum Sammeln der <i>Befehlsgruppe</i> für das Layout.
