Ticket #28899: Added context menu buttons to InlinedTileComponent.

--- a/com.top_logic/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic/src/main/java/META-INF/messages_de.properties
@@ -7061,8 +7061,8 @@ com.top_logic.mig.html.layout.tiles.component.TileListComponent.Config.noCardKey
 com.top_logic.mig.html.layout.tiles.component.TileListComponent.Config.noCardKey.tooltip = Der <i>Ressourcenschlüssel</i> der Nachricht, wenn es keine Elemente gibt, die als Kacheln angezeigt werden sollen.
 com.top_logic.mig.html.layout.tiles.component.TileListComponent.Config.tilePreview = Kachel-Vorschau
 com.top_logic.mig.html.layout.tiles.component.TileListComponent.Config.tilePreview.tooltip = Die <i>Kachelvorschau</i>, die zum <i>HTML-Fragmentieren</i> als Vorschau für die angezeigten Elemente verwendet wird.
-com.top_logic.mig.html.layout.tiles.component.TileListComponent.ContextMenuButtons.contextMenuButtons = Schaltflächen im Kontextmenü
-com.top_logic.mig.html.layout.tiles.component.TileListComponent.ContextMenuButtons.contextMenuButtons.tooltip = Alle Schaltflächen auf dieser Komponente.
+com.top_logic.mig.html.layout.tiles.component.TileListComponent.ContextMenuButtons.contextMenuButtons = Befehle im Kachel-Kontextmenü
+com.top_logic.mig.html.layout.tiles.component.TileListComponent.ContextMenuButtons.contextMenuButtons.tooltip = Diese Befehle werden im Burger-Menü der Kacheln angezeigt.
 com.top_logic.mig.html.layout.tiles.component.TileListComponent.tooltip = <i>Wählbare Builder-Komponente</i> mit zusätzlichen Konfigurationseigenschaften und vordefinierten Eigenschaftswerten.
 com.top_logic.mig.html.layout.tiles.component.TileListControlProvider = Kachellisten-Steuerungsanbieter
 com.top_logic.mig.html.layout.tiles.component.TileListControlProvider.tooltip = <i>Layout-Control-Anbieter</i>, der ein <i>zusammengesetztes Kachel-Steuerelement</i> für eine <i>Kachel-Listenkomponente</i> erstellt.
