--- a/com.top_logic/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic/src/main/java/META-INF/messages_en.properties
@@ -7061,8 +7061,8 @@ com.top_logic.mig.html.layout.tiles.component.TileListComponent.Config.noCardKey
 com.top_logic.mig.html.layout.tiles.component.TileListComponent.Config.noCardKey.tooltip = The <i>resource key</i> of the message, when there are no elements to be displayed as tiles.
 com.top_logic.mig.html.layout.tiles.component.TileListComponent.Config.tilePreview = Tile preview
 com.top_logic.mig.html.layout.tiles.component.TileListComponent.Config.tilePreview.tooltip = The <i>tile preview</i> that is used to <i>HTML fragment</i> as preview for the displayed elements.
-com.top_logic.mig.html.layout.tiles.component.TileListComponent.ContextMenuButtons.contextMenuButtons = Context menu buttons
-com.top_logic.mig.html.layout.tiles.component.TileListComponent.ContextMenuButtons.contextMenuButtons.tooltip = All buttons on this component.
+com.top_logic.mig.html.layout.tiles.component.TileListComponent.ContextMenuButtons.contextMenuButtons = Tile context menu commands
+com.top_logic.mig.html.layout.tiles.component.TileListComponent.ContextMenuButtons.contextMenuButtons.tooltip = These commands are displayed in the burger menu of the tiles.
 com.top_logic.mig.html.layout.tiles.component.TileListComponent.tooltip = <i>Selectable builder component</i> with additional configuration properties and pre-defined property values.
 com.top_logic.mig.html.layout.tiles.component.TileListControlProvider = Tile list control provider
 com.top_logic.mig.html.layout.tiles.component.TileListControlProvider.tooltip = <i>Layout control provider</i> creating a <i>composite tile control</i> for a <i>tile list component</i>.
