Ticket #27376: implement sessionRevision() function
- returns the last persisted revision of the current session
- added documentation and added testcase

--- a/com.top_logic.model.search/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic.model.search/src/main/java/META-INF/messages_de.properties
@@ -846,6 +846,8 @@ com.top_logic.model.search.expr.config.operations.revision.RevisionAt$Builder = 
 com.top_logic.model.search.expr.config.operations.revision.RevisionAt$Builder.tooltip = <i>Einfache Methode zur</i> Erstellung von <i>Revisionen bei</i>.
 com.top_logic.model.search.expr.config.operations.revision.RevisionForCommit$Builder = Bauherr
 com.top_logic.model.search.expr.config.operations.revision.RevisionForCommit$Builder.tooltip = <i>Einfacher Methodenersteller</i>, der <i>Revisionen für Commits</i> erstellt.
+com.top_logic.model.search.expr.config.operations.revision.SessionRevision$Builder = Erbauer
+com.top_logic.model.search.expr.config.operations.revision.SessionRevision$Builder.tooltip = <i>Einfacher Erbauer</i> von <i>Methoden</i> zur <i>Überarbeitung von Sitzungen</i>.
 com.top_logic.model.search.expr.config.operations.security.FilterPermission$Builder = Erbauer
 com.top_logic.model.search.expr.config.operations.security.FilterPermission$Builder.tooltip = <i>Einfacher Erbauer</i> einer <i>Methode</i> zur Erstellung einer <i>Filtererlaubnis</i>.
 com.top_logic.model.search.expr.config.operations.session.LoadFromSession$Builder = Erbauer
