--- a/com.top_logic.model.search/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic.model.search/src/main/java/META-INF/messages_en.properties
@@ -846,6 +846,8 @@ com.top_logic.model.search.expr.config.operations.revision.RevisionAt$Builder = 
 com.top_logic.model.search.expr.config.operations.revision.RevisionAt$Builder.tooltip = <i>Simple method builder</i> creating <i>revision at</i>.
 com.top_logic.model.search.expr.config.operations.revision.RevisionForCommit$Builder = Builder
 com.top_logic.model.search.expr.config.operations.revision.RevisionForCommit$Builder.tooltip = <i>Simple method builder</i> creating <i>revision for commit</i>.
+com.top_logic.model.search.expr.config.operations.revision.SessionRevision$Builder = Builder
+com.top_logic.model.search.expr.config.operations.revision.SessionRevision$Builder.tooltip = <i>Simple method builder</i> creating <i>session revision</i>.
 com.top_logic.model.search.expr.config.operations.security.FilterPermission$Builder = Builder
 com.top_logic.model.search.expr.config.operations.security.FilterPermission$Builder.tooltip = <i>Simple method builder</i> creating <i>filter permission</i>.
 com.top_logic.model.search.expr.config.operations.session.LoadFromSession$Builder = Builder
