Ticket #25529: Introduced type of ConstraintChecks.

--- a/com.top_logic.model.search/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic.model.search/src/main/java/META-INF/messages_en.properties
@@ -906,6 +906,8 @@ com.top_logic.model.search.providers.ConditionalActions.tooltip = Decides whethe
 com.top_logic.model.search.providers.ConstraintCheckByExpression = Constraint check by expression
 com.top_logic.model.search.providers.ConstraintCheckByExpression.Config.check = Check
 com.top_logic.model.search.providers.ConstraintCheckByExpression.Config.check.tooltip = Function testing a certain consistency constraint on an object. <p> The function expects the current value of the context attribute as first argument and the base object defining the attribute as second argument. A failure is signaled by returning an internationalized text describing the problem. A <code>null</code> value is interpreted as success: </p> <code>value -> object -> [expression computing <i>resource key</i>]</code> <p> The context attribute is the attribute, this <i>constraint check</i> algorithm is annotated to. It's value is the main value to check. Any check failure messages are reported at the input field for this context attribute, if the check is performed in the user interface. </p>
+com.top_logic.model.search.providers.ConstraintCheckByExpression.Config.type = Type
+com.top_logic.model.search.providers.ConstraintCheckByExpression.Config.type.tooltip = The type of constraint to decide whether it should be reported as an error and saving should be prevented, or only a warning should be displayed in the GUI.
 com.top_logic.model.search.providers.ConstraintCheckByExpression.tooltip = <i>Constraint check</i> that can be parameterized by TL-Script expressions.
 com.top_logic.model.search.providers.CreateTypeOptionsByExpression = Dynamic type options
 com.top_logic.model.search.providers.CreateTypeOptionsByExpression.Config.default-type = Default type
