--- a/com.top_logic/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic/src/main/java/META-INF/messages_de.properties
@@ -7520,6 +7520,12 @@ com.top_logic.model.annotate.ui.TLSortColumns = Sortierspalten
 com.top_logic.model.annotate.ui.TLSortColumns.tooltip = Legt die Sortierreihenfolge von Tabellen fest, die Objekte des kommentierten Typs darstellen.
 com.top_logic.model.annotate.util.AttributeSettings = Einstellungen der Attribute
 com.top_logic.model.annotate.util.AttributeSettings.tooltip = Konfigurierte Einstellungen für <i>strukturierten Typ Teil</i> und <i>strukturierten Typ</i>.
+com.top_logic.model.annotate.util.ConstraintCheck$ConstraintType = Überprüfungsart
+com.top_logic.model.annotate.util.ConstraintCheck$ConstraintType.tooltip = Einstellung ob die Überprüfung nur als Warnhinweis in der GUI angezeigt werden soll oder das Speichern verhindern soll.
+com.top_logic.model.annotate.util.ConstraintCheck.ConstraintType.ERROR = Fehler
+com.top_logic.model.annotate.util.ConstraintCheck.ConstraintType.ERROR.tooltip = Überprüfungsart die als Fehler dargestellt wird und das Speichern verhindert.
+com.top_logic.model.annotate.util.ConstraintCheck.ConstraintType.WARNING = Warnung
+com.top_logic.model.annotate.util.ConstraintCheck.ConstraintType.WARNING.tooltip = Überprüfungsart die als Warnung dargestellt wird und das Speichern nicht verhindert.
 com.top_logic.model.cache.AbstractTLModelCache = Modell-Cache
 com.top_logic.model.cache.AbstractTLModelCache.tooltip = Ein <i>einfacher Wissensdatenbank-Cache</i> für Daten auf Basis des <i>Modells</i>.
 com.top_logic.model.cache.TLModelCacheImpl = Modell-Cache-Implementierung
