--- a/com.top_logic/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic/src/main/java/META-INF/messages_en.properties
@@ -7520,6 +7520,12 @@ com.top_logic.model.annotate.ui.TLSortColumns = Sort columns
 com.top_logic.model.annotate.ui.TLSortColumns.tooltip = Sets the sort order of tables representing objects of the annotated type.
 com.top_logic.model.annotate.util.AttributeSettings = Attribute settings
 com.top_logic.model.annotate.util.AttributeSettings.tooltip = Configured settings for <i>structured type part</i> and <i>structured type</i>.
+com.top_logic.model.annotate.util.ConstraintCheck$ConstraintType = Constraint type
+com.top_logic.model.annotate.util.ConstraintCheck$ConstraintType.tooltip = Classification for a <i>constraint</i> whether it should only display a warning or prevent saving.
+com.top_logic.model.annotate.util.ConstraintCheck.ConstraintType.ERROR = Error
+com.top_logic.model.annotate.util.ConstraintCheck.ConstraintType.ERROR.tooltip = Type of <i>constraint</i> that should be reported as failure and prevent storing the value.
+com.top_logic.model.annotate.util.ConstraintCheck.ConstraintType.WARNING = Warning
+com.top_logic.model.annotate.util.ConstraintCheck.ConstraintType.WARNING.tooltip = Type of <i>constraint</i> that should be reported as warning in the GUI and do not prevent storing the value.
 com.top_logic.model.cache.AbstractTLModelCache = Model cache
 com.top_logic.model.cache.AbstractTLModelCache.tooltip = A <i>simple knowledge-base cache</i> for data based on the <i>model</i>.
 com.top_logic.model.cache.TLModelCacheImpl = Model cache implementation
